--- a/client/src/Components/Messages-bar/Messages.css
+++ b/client/src/Components/Messages-bar/Messages.css
@@ -13,16 +13,17 @@
 
 .m-container {
   width: 250px;
-  height: 96vh;
+  height: 92.808vh;
   background-color: white;
   left: 100%;
   scrollbar-width: none;
   overflow-x: hidden;
   overflow-y: auto;
-  position: fixed;
+  position: absolute;
   /* border-radius: 20px 0 0 20px; */
   z-index: 1;
   box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.3);
+  position: fixed;
 }
 
 .m-active {
