--- a/client/src/Pages/LandingPage/LandingPage.css
+++ b/client/src/Pages/LandingPage/LandingPage.css
@@ -8,7 +8,7 @@
   z-index: 1;
 }
 
-.lp-login-text {
+/* .lp-login-text {
   font-size: 80%;
   color: white;
   background-color: #18191a00;
@@ -27,6 +27,38 @@
   align-items: center;
   justify-content: center;
   z-index: 1;
+} */
+
+.lp-login-text {
+  transition: all 0.3s ease-in-out;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lp-login-text {
+  width: 80px !important;
+  height: 30px;
+  border-radius: 10px;
+  background-image: linear-gradient(135deg, #041b2ab6 0%, #041b2a 100%);
+  box-shadow: 0 20px 30px -6px #041b2aab;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  font-size: 90%;
+  color: white;
+  transition: transform box-shadow 0.4s ease;
+}
+
+.lp-login-text:hover {
+  transform: translateY(3px);
+  box-shadow: none;
+}
+
+.lp-login-text:active {
+  opacity: 0.5;
 }
 
 .lp-writen-content {
@@ -55,25 +87,48 @@
 }
 
 .lp-offers-link {
-  font-size: 90%;
+  /* font-size: 90%;
   color: white;
   background-color: #18191a00;
   border-width: 0px;
-  font-family: "Inter", sans-serif;
+ 
   letter-spacing: 0.5px;
-  text-decoration: none;
-  width: 30%;
-  height: 45px;
+  
+  
   background: #29343f;
   border: solid white;
   border-width: 0px;
   border-radius: 10px;
+  cursor: pointer; */
+  letter-spacing: 0.5px;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  width: 30%;
+  height: 45px;
+  border-radius: 10px;
+  background-image: linear-gradient(135deg, #041b2ab6 0%, #041b2a 100%);
+  box-shadow: 0 20px 30px -6px #041b2aab;
+  outline: none;
   cursor: pointer;
+  border: none;
+  font-size: 90%;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 0.5s ease, box-shadow 0.5s ease;
   transform: translateX(15px);
 }
+
+.lp-offers-link:hover {
+  transform: translate(15px, 3px);
+  box-shadow: none;
+}
+
+.lp-offers-link:active {
+  opacity: 0.5;
+}
+
 @media (max-width: 500px) {
   .lp-offers-link {
     font-size: 90%;
@@ -232,23 +287,50 @@
 }
 
 .lp-login-link {
-  align-self: center;
+  /* 
   background-color: #18191a00;
   font-size: 100%;
   color: white;
   letter-spacing: 0.5px;
   border-width: 0px;
-  font-family: "Inter", sans-serif;
-  text-decoration: none;
-  width: 10%;
-  height: 40px;
+  
+ 
   background: #29343f;
   border-width: 0px;
   border-radius: 10px;
+  cursor: pointer; */
+  width: 10%;
+  height: 40px;
+  align-self: center;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  border-radius: 10px;
+  background-image: linear-gradient(135deg, #041b2ab6 0%, #041b2a 100%);
+  box-shadow: 0 20px 30px -6px #041b2aab;
+  outline: none;
   cursor: pointer;
+  border: none;
+  font-size: 90%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.5s ease, box-shadow 0.5s ease;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.lp-login-link:hover {
+  transform: translateY(3px);
+  box-shadow: none;
+}
+
+.lp-login-link:active {
+  opacity: 0.5;
 }
 
 @media (max-width: 575.98px) {
@@ -258,7 +340,7 @@
 }
 
 .lp-moving-shape::before {
-  /* filter: blur(3px); */
+  filter: blur(3px);
   z-index: -1;
   position: absolute;
   content: "";
@@ -301,7 +383,7 @@
 }
 
 .lp-moving-shape-2 {
-  /* filter: blur(3px); */
+  filter: blur(3px);
   z-index: -1;
   position: absolute;
   content: "";
@@ -326,7 +408,7 @@
 }
 
 .lp-moving-shape-3 {
-  /* filter: blur(3px); */
+  filter: blur(3px);
   z-index: 10;
   position: absolute;
   content: "";
@@ -350,7 +432,7 @@
 }
 
 .lp-moving-shape-4 {
-  /* filter: blur(3px); */
+  filter: blur(3px);
   z-index: -1;
   position: absolute;
   content: "";
@@ -374,7 +456,7 @@
 }
 
 .lp-moving-shape-5 {
-  /* filter: blur(3px); */
+  filter: blur(3px);
   z-index: -1;
   position: absolute;
   content: "";
@@ -398,7 +480,7 @@
 }
 
 .lp-moving-shape-6 {
-  /* filter: blur(3px); */
+  filter: blur(3px);
   z-index: -1;
   position: absolute;
   content: "";
