--- a/client/src/Components/Messages-bar/Messages.css
+++ b/client/src/Components/Messages-bar/Messages.css
@@ -3,7 +3,12 @@
   gap: 10px;
   height: 57px;
   align-items: center;
-  transform: translateX(15px);
+
+  cursor: pointer;
+}
+
+.m-infos:hover {
+  background-color: #f0f2f5;
 }
 
 .m-userinfos {
@@ -21,9 +26,15 @@
   overflow-y: auto;
   position: absolute;
   /* border-radius: 20px 0 0 20px; */
-  z-index: 1;
+  z-index: 3;
   box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.3);
   position: fixed;
+}
+
+@media (max-width: 824px) {
+  .m-active {
+    z-index: 0;
+  }
 }
 
 .m-active {
@@ -41,10 +52,10 @@
 }
 
 .m-statusicon {
-  position: absolute;
+  position: relative;
   color: green;
   width: 10px;
-  transform: translate(25px, 15px);
+  transform: translate(48px, 15px);
 }
 
 .m-non-active {
