--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -1,6 +1,30 @@
 .n-container {
   box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.3);
-  z-index: 3;
+  z-index: 4;
+}
+
+.n-infos {
+  cursor: pointer;
+}
+
+.n-dropdown-menu-item {
+  color: #041b2a;
+  font-family: "Poppins", sans-serif;
+}
+
+.n-dropdown-menu-item:hover {
+  border-radius: 6px;
+  background-color: #041b2a;
+  color: white;
+}
+
+.n-dropdown-menu-item .n-link {
+  color: #041b2a;
+  font-family: "Poppins", sans-serif;
+}
+
+.n-dropdown-menu-item:hover .n-link {
+  color: white;
 }
 
 .n-profilepic {
@@ -9,8 +33,12 @@
   border-radius: 50%;
 }
 
+.n-functionalities {
+  gap: 10%;
+}
+
 .n-row {
-  height: 7.192vh;
+  min-height: 7.192vh;
   background-color: white;
   /* background: #42b1bc;
   background: linear-gradient(to top, #42b1bc 0%, #757575 100%); */
@@ -65,13 +93,23 @@
   background-image: linear-gradient(to right, #42b1bc, #757575);
   -webkit-background-clip: text;
   color: transparent;
+  font-family: "Climate Crisis", sans-serif;
+  letter-spacing: 5px;
+  font-size: 140%;
+  font-weight: bolder;
+  cursor: pointer;
+  align-self: center;
+
+  /* background-image: linear-gradient(to right, #42b1bc, #757575);
+  -webkit-background-clip: text;
+  color: transparent;
   font-family: "Syncopate", sans-serif;
   display: flex;
   align-items: center;
   font-weight: 900;
   font-size: 120%;
   letter-spacing: 1px;
-  align-self: center;
+  */
 }
 
 .nav-icon {
@@ -127,4 +165,8 @@
 .hamburger input:checked + svg .line-top-bottom {
   stroke-dasharray: 20 300;
   stroke-dashoffset: -32.42;
+}
+
+.dropdown-toggle::after {
+  display: none;
 }
