--- a/client/src/Components/Pomodoro/Pomodoro.css
+++ b/client/src/Components/Pomodoro/Pomodoro.css
@@ -1,13 +1,7 @@
 .p-container {
-  width: 95.9%;
-  display: flex;
-  height: 25%;
-  align-items: center;
   gap: 3%;
   padding: 0px 5px;
-  margin-top: 10px;
-  border-top: solid 1.5px rgb(158, 158, 158);
-  padding-top: 30px;
+  height: 100%;
 }
 
 .p-timer {
@@ -15,6 +9,10 @@
   flex-direction: column;
   align-items: center;
   gap: 5px;
+  position: absolute;
+  top: 55%;
+  transform: translateY(-50%);
+  right: 1%;
 }
 
 .p-controle {
@@ -31,20 +29,21 @@
 
 .p-config {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 12px;
+
+  height: 100%;
 }
 
 .p-phase {
   display: flex;
+  align-items: center;
   gap: 10%;
   color: #041b2a;
   font-family: "Poppins", sans-serif;
   user-select: none;
 }
 
-.p-phase p {
+.p-phase div {
   border: solid;
   border-radius: 20px;
   padding: 0px 5px;
@@ -65,52 +64,80 @@
 
 .p-setwork {
   display: flex;
-  flex-direction: column;
-  gap: 3px;
+  gap: 10px;
+
   align-items: center;
+  padding-right: 15px;
+  border-right: solid 1px;
 }
 
 .p-setwork label {
   color: #041b2a;
   font-family: "Poppins", sans-serif;
   font-size: 80%;
+  font-weight: 500;
 }
 
 .p-setwork input {
-  width: 50%;
+  width: 50px;
   font-family: "Poppins", sans-serif;
-  background-color: #18191a;
   border: solid;
   border-radius: 20px;
   border-width: 1px;
   border-color: #6a6a6a;
   font-size: 80%;
-  color: white;
+  color: #041b2a;
   padding-left: 10px;
 }
 
 .p-setbreak {
-  display: flex;
-  flex-direction: column;
-  gap: 3px;
   align-items: center;
+  display: flex;
+  gap: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-right: solid 1px;
 }
 
 .p-setbreak label {
   color: #041b2a;
   font-family: "Poppins", sans-serif;
   font-size: 80%;
+  font-weight: 500;
 }
 
 .p-setbreak input {
-  width: 50%;
+  width: 50px;
   font-family: "Poppins", sans-serif;
-  background-color: #18191a;
   border: solid;
   border-radius: 20px;
   border-width: 1px;
   border-color: #6a6a6a;
   font-size: 80%;
-  color: white;
+  color: #041b2a;
   padding-left: 10px;
+}
+
+.p-timer-state-container {
+  padding-left: 15px;
+}
+
+.p-timer-state {
+  border: none;
+  outline: none;
+  font-family: "Poppins", sans-serif;
+  transform: translateY(-3px);
+  height: 25px;
+  width: 80px;
+  background-color: #041b2a;
+  font-size: 70%;
+  color: #fff;
+  border-radius: 5px;
+  transition: all ease 0.3s;
+  box-shadow: 1px 5px 1px 0px #041b2a70;
+}
+
+.p-timer-state:active {
+  transform: translateY(2px);
+  box-shadow: 0px 0px 0px 0px #a29bfe;
 }
