--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -1,9 +1,9 @@
 .s-container {
   height: 92.808vh;
   width: 311px;
-  z-index: 2;
+  z-index: 3;
   background-color: white;
-
+  box-shadow: 3px 0px 10px rgb(0, 0, 0, 0.3);
   /* background: #42b1bc;
   background: linear-gradient(to bottom, #42b1bc 0%, #757575 100%); */
 }
