--- a/client/src/Pages/LandingPage/LandingPage.css
+++ b/client/src/Pages/LandingPage/LandingPage.css
@@ -1,11 +1,13 @@
 .lp-navbar h1 {
-  color: #cfdee7;
-  font-family: "Syncopate", sans-serif;
-  font-size: 150%;
-  letter-spacing: 2px;
-  -webkit-text-stroke: 1px white;
+  color: white;
+  font-family: "Climate Crisis", sans-serif;
+  font-size: 160%;
+  letter-spacing: 5px;
   align-self: center;
   z-index: 1;
+  /* background-color: blue; */
+  width: fit-content;
+  height: 30px;
 }
 
 /* .lp-login-text {
