--- a/client/src/Pages/Login/Login.css
+++ b/client/src/Pages/Login/Login.css
@@ -15,49 +15,18 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -78.5%);
+  z-index: -1;
 }
 
 .l-page-title {
-  color: #cfdee7;
-  font-family: "Syncopate", sans-serif;
-  font-size: 150%;
-  letter-spacing: 2px;
-  -webkit-text-stroke: 1px white;
-  align-self: center;
-  z-index: 1;
-}
-
-.l-role {
-  z-index: 1;
-  display: flex;
-  justify-content: space-between;
-  width: 200px !important;
-  height: 35px;
-}
-
-.l-inchecked {
-  width: 80px;
-  border-style: solid;
-  border-color: white;
-  border-radius: 20px;
-  border-width: 1px;
-  background-color: #24252600;
   color: white;
-  font-family: "Poppins", sans-serif;
-  transition: background-color 1s;
-  cursor: pointer;
-  font-size: 80%;
-}
-
-.l-checked {
-  width: 80px;
-  border-style: solid;
-  background-color: white;
-  border-radius: 20px;
-  border-color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 80%;
-  transition: background-color 1s;
+  font-family: "Climate Crisis", sans-serif;
+  font-size: 160%;
+  letter-spacing: 5px;
+  margin-left: 7%;
+  /* background-color: blue; */
+  width: fit-content;
+  height: 30px;
 }
 
 .l-container {
@@ -65,7 +34,7 @@
   border: solid;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -45%);
+  transform: translate(-50%, -55%);
   border-radius: 10px;
   border-width: thick;
   border-color: #728fa5;
@@ -78,10 +47,10 @@
     transform: translate(-50%, -100%);
   }
   75% {
-    transform: translate(-50%, -40%);
+    transform: translate(-50%, -50%);
   }
   100% {
-    transform: translate(-50%, -45%);
+    transform: translate(-50%, -55%);
   }
 }
 
