--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -67,15 +67,46 @@
 
 .n-notification-icon {
   color: #041b2a;
-  font-size: 170%;
+  font-size: 180%;
+  cursor: pointer;
 }
 
+.n-notif:hover {
+  animation: bellRing 0.9s both;
+}
+
+@keyframes bellRing {
+  0%,
+  100% {
+    transform-origin: top;
+  }
+
+  15% {
+    transform: rotateZ(10deg);
+  }
+
+  30% {
+    transform: rotateZ(-10deg);
+  }
+
+  45% {
+    transform: rotateZ(5deg);
+  }
+
+  60% {
+    transform: rotateZ(-5deg);
+  }
+
+  75% {
+    transform: rotateZ(2deg);
+  }
+}
 .n-active {
   position: absolute;
   width: 8px;
   height: 8px;
   color: green;
-  transform: translate(-11px, 2px);
+  transform: translate(-12px, 2px);
 }
 
 .n-messages {
@@ -169,4 +200,56 @@
 
 .dropdown-toggle::after {
   display: none;
+}
+
+.notifications {
+  width: 350px;
+  height: 500px;
+  overflow-y: scroll;
+}
+
+.notification {
+  padding-top: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.notification:active {
+  background-color: transparent !important;
+}
+
+.notif-sender {
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+}
+
+.notif-content {
+  font-family: "Poppins", sans-serif;
+  font-size: 80%;
+  height: fit-content;
+  text-wrap: wrap;
+}
+
+.notif-unseen {
+  font-size: 80%;
+  color: rgb(4, 4, 132);
+}
+
+.notif-date {
+  font-family: "Poppins", sans-serif;
+  font-size: 70%;
+  font-weight: 500;
+  color: rgb(4, 4, 132);
+}
+
+.notif-seen-date {
+  font-weight: 100;
+}
+
+.notif-header {
+  font-family: "Poppins", sans-serif;
+  font-size: 140%;
+  color: #041b2a;
+  font-weight: 500;
 }
